--- a/Semana2/Dia2/02-css.css
+++ b/Semana2/Dia2/02-css.css
@@ -19,3 +19,9 @@ section {
     font-family: "Courier New";
     background-color: peru;
 }
+
+.titulo1 {
+    font-family: sans-serif;
+    text-decoration: underline;
+    color: crimson;
+}
