--- a/Semana2/Dia2/02-css.css
+++ b/Semana2/Dia2/02-css.css
@@ -23,5 +23,5 @@ section {
 .titulo1 {
     font-family: sans-serif;
     text-decoration: underline;
-    color: crimson;
+    color: crimson !important;
 }
