--- a/Semana2/Dia2/03-referencias.css
+++ b/Semana2/Dia2/03-referencias.css
@@ -22,3 +22,13 @@ article > p {
 #caja > span {
     background-color: yellow;
 }
+
+/* PSEUDOCLASES */
+/* nth-of-type( numero o un indicador) */
+tr:nth-of-type(odd) {
+    background-color: chocolate;
+}
+
+tr:nth-of-type(even) {
+    background-color: greenyellow;
+}
