--- a/Semana3/01-coloresymedidas.css
+++ b/Semana3/01-coloresymedidas.css
@@ -1,5 +1,20 @@
+* {
+    /* todos los elementos tengan un borde de 1px */
+    border: 1px solid red;
+}
+
+/* Medidas */
+
+header {
+    width: 400px;
+    height: 200px;
+}
+
 h1 {
     color: peru;
+    width: 50%;
+    border: 1px solid blue;
+    height: 20%;
 }
 
 h2 {
