--- a/Semana4/Dia1/03-slider.css
+++ b/Semana4/Dia1/03-slider.css
@@ -4,7 +4,7 @@
     border: 1px solid gray;
     position: relative;
     /* overflow: hidden todo lo que sobresalga de los limites de padre,desaparece */
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 .slide {
@@ -30,6 +30,9 @@
 
 .hijo3 {
     background-color: cornflowerblue;
+    animation-name: animacion3;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
 }
 
 @keyframes animacion1 {
@@ -65,6 +68,24 @@
     }
     70% {
         top: -100%;
+    }
+    100% {
+        top: -100%;
+    }
+}
+
+@keyframes animacion3 {
+    0% {
+        top: 100%;
+    }
+    66% {
+        top: 100%;
+    }
+    70% {
+        top: 0%;
+    }
+    97% {
+        top: 0%;
     }
     100% {
         top: -100%;
