--- a/Semana4/Dia1/04-grid.css
+++ b/Semana4/Dia1/04-grid.css
@@ -7,13 +7,45 @@
 .contenedor {
     border: 1px solid red;
     height: 100vh;
+    /* width: 1000px; */
     display: grid;
     /* grid-template-columns: 300px 300px 300px; */
     /* repeat(cuantas, tamaño) */
     /* grid-template-columns: repeat(4, 1fr); */
-    grid-template-columns: repeat(4, minmax(150px, 1fr));
+    /* EXPLICITO */
+    grid-template-columns: repeat(3, minmax(150px, 1fr));
+    grid-template-rows: repeat(3, 300px);
+
+    /* brecha */
+    gap: 40px;
+
+    /* IMPLICITO */
+    grid-auto-columns: 250px;
+    grid-auto-rows: 275px;
+    grid-auto-flow: row;
+    /* áreas */
+    grid-template-areas:
+        "header header header"
+        "main main aside"
+        "footer footer footer";
 }
 
 .item {
     border: 1px solid blue;
+}
+
+.item:nth-of-type(1) {
+    /* grid-column-start: 1;
+    grid-column-end: 3;
+
+    grid-row-start: 2;
+    grid-row-end: 4; */
+    /* inicio / final */
+    /* grid-row: 2 / 4;
+    grid-column: 1 / 3; */
+    grid-area: header;
+}
+
+.item:nth-of-type(2) {
+    grid-area: main;
 }
