--- a/Semana4/Dia2/proyectito/styles/estilos.css
+++ b/Semana4/Dia2/proyectito/styles/estilos.css
@@ -115,6 +115,28 @@ div {
     color: white;
 }
 
+/* Menú */
+
+#check {
+    /* esconde solo visualmente, pero esta en el dom */
+    visibility: hidden;
+    position: absolute;
+    z-index: -99;
+}
+
+.show-menu-btn,
+.hide-menu-btn {
+    cursor: pointer;
+    font-size: 30px;
+    display: none;
+}
+
+.menu {
+    transition-duration: 0.5s;
+}
+
+/* mediaqueries */
+
 @media screen and (max-width: 768px) {
     .tarjetas {
         flex-direction: column;
@@ -123,5 +145,40 @@ div {
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+}
+
+@media screen and (max-width: 572px) {
+    .menu {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: #c71fe6;
+        flex-direction: column;
+        padding: 100px 0;
+        right: -100%;
+    }
+
+    .menu li {
+        padding: 20px 0;
+        font-size: 24px;
+    }
+
+    .hide-menu-btn {
+        position: absolute;
+        top: 40px;
+        right: 40px;
+    }
+
+    .hide-menu-btn,
+    .show-menu-btn {
+        display: block;
+    }
+
+    /* :checked hace referencia si el check esta activo ✔ */
+    /* ~ este símbolo hara referencia a los elementos después de check en la estructura, en este caso, .menú */
+    #check:checked ~ .menu {
+        right: 0;
     }
 }
