--- a/Semana4/Dia2/galeria/css/estilos.css
+++ b/Semana4/Dia2/galeria/css/estilos.css
@@ -40,3 +40,46 @@ body {
     grid-column: 1 / 3;
     grid-row: 1 / 3;
 }
+
+.caja:nth-of-type(2) {
+    background-image: url("../img/tile2.jpg");
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+}
+
+.caja:nth-of-type(3) {
+    background-image: url("../img/tile10.jpg");
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+}
+
+.caja:nth-of-type(4) {
+    background-image: url("../img/tile11.jpg");
+    /* grid-column : 4 / -1, -1 hace referencia al final */
+    grid-column: 4 / 5;
+    grid-row: 1 / 3;
+}
+
+.caja:nth-of-type(5) {
+    background-image: url("../img/title18.jpg");
+    grid-column: 1 / 3;
+    grid-row: 3 / 4;
+}
+
+.caja:nth-of-type(6) {
+    background-image: url("../img/tile5.jpg");
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;
+}
+
+.caja:nth-of-type(7) {
+    background-image: url("../img/title19.jpg");
+    grid-column: 4 / 5;
+    grid-row: 3 / 4;
+}
+
+.caja:nth-of-type(8) {
+    background-image: url("../img/title17.jpg");
+    grid-column: 1 / 5;
+    grid-row: 4 / 5;
+}
