--- a/Semana4/Dia2/galeria/css/estilos.css
+++ b/Semana4/Dia2/galeria/css/estilos.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 html,
@@ -32,6 +32,19 @@ body {
     background-size: cover;
     /* alinea el background  */
     background-position: center;
+    transition-duration: 0.5s;
+
+    animation-name: entrada;
+    animation-duration: 0.7s;
+    animation-timing-function: ease-out;
+    /* animation-fill-mode define que pasa antes de la animacion */
+    /* backwards: animación se aplique antes de que comience */
+    animation-fill-mode: backwards;
+}
+
+.caja:hover {
+    box-shadow: 4px 4px 4px gray;
+    transform: translate(0, 5px) scale(1.01);
 }
 
 .caja:nth-of-type(1) {
@@ -39,18 +52,21 @@ body {
     background-image: url("../img/tile1.jpg");
     grid-column: 1 / 3;
     grid-row: 1 / 3;
+    animation-delay: 50ms;
 }
 
 .caja:nth-of-type(2) {
     background-image: url("../img/tile2.jpg");
     grid-column: 3 / 4;
     grid-row: 1 / 2;
+    animation-delay: 120ms;
 }
 
 .caja:nth-of-type(3) {
     background-image: url("../img/tile10.jpg");
     grid-column: 3 / 4;
     grid-row: 2 / 3;
+    animation-delay: 150ms;
 }
 
 .caja:nth-of-type(4) {
@@ -58,28 +74,48 @@ body {
     /* grid-column : 4 / -1, -1 hace referencia al final */
     grid-column: 4 / 5;
     grid-row: 1 / 3;
+    animation-delay: 80ms;
 }
 
 .caja:nth-of-type(5) {
     background-image: url("../img/title18.jpg");
     grid-column: 1 / 3;
     grid-row: 3 / 4;
+    animation-delay: 300ms;
 }
 
 .caja:nth-of-type(6) {
     background-image: url("../img/tile5.jpg");
     grid-column: 3 / 4;
     grid-row: 3 / 4;
+    animation-delay: 400ms;
 }
 
 .caja:nth-of-type(7) {
     background-image: url("../img/title19.jpg");
     grid-column: 4 / 5;
     grid-row: 3 / 4;
+    animation-delay: 220ms;
 }
 
 .caja:nth-of-type(8) {
     background-image: url("../img/title17.jpg");
     grid-column: 1 / 5;
     grid-row: 4 / 5;
+    animation-delay: 175ms;
+}
+
+@keyframes entrada {
+    0% {
+        /* no se van a ver */
+        transform: scale(0);
+    }
+    70% {
+        /* lo agranda un poquito */
+        transform: scale(1.05);
+    }
+    100% {
+        /* lo dejamos tal cual, sin escalar */
+        transform: scale(1);
+    }
 }
