--- a/Semana10/proyectitov2/src/css/estilos.css
+++ b/Semana10/proyectitov2/src/css/estilos.css
@@ -8,4 +8,17 @@
 
 .contenedor {
     display: flex;
+    height: 100vh;
+}
+
+.aplicacion {
+    width: 70%;
+    height: 100%;
+    background-color: #f5f5f6;
+}
+
+.boleta {
+    width: 30%;
+    height: 100%;
+    background-color: #35373e;
 }
