--- a/Semana10/proyectitov2/src/css/estilos.css
+++ b/Semana10/proyectitov2/src/css/estilos.css
@@ -57,3 +57,16 @@ main {
     display: flex;
     flex-direction: column;
 }
+
+.img-top {
+    width: 100%;
+    border-radius: 5px;
+}
+
+.text-bottom {
+    padding: 10px;
+}
+
+.text-bottom > * {
+    margin: 5px 0;
+}
