--- a/Semana10/proyectitov2/src/css/estilos.css
+++ b/Semana10/proyectitov2/src/css/estilos.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     /* temporal */
-    border: 1px solid gray;
+    /* border: 1px solid gray; */
 }
 
 ul {
