--- a/Semana10/proyectitov2/src/css/estilos.css
+++ b/Semana10/proyectitov2/src/css/estilos.css
@@ -12,7 +12,7 @@ ul {
 
 .contenedor {
     display: flex;
-    height: 100vh;
+    height: 100%;
 }
 
 .aplicacion {
@@ -23,7 +23,11 @@ ul {
 
 .boleta {
     width: 20%;
-    height: 100%;
+    min-height: 100vh;
+    position: fixed;
+    right: 0;
+    top: 0;
+    overflow: scroll;
     background-color: #35373e;
 }
 
