--- a/Semana11/store/src/App.css
+++ b/Semana11/store/src/App.css
@@ -47,3 +47,30 @@
     left: 0;
     background: linear-gradient(45deg, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.65) 100%);
 }
+
+.categoria-box {
+    max-height: 400px;
+    overflow: hidden;
+    position: relative;
+}
+
+.categoria-body {
+    position: absolute;
+    left: 20px;
+    top: 20px;
+    text-align: left;
+    z-index: 10;
+}
+
+.categoria-img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    z-index: 1;
+}
+
+.categoria-img:hover {
+    transform: scale(1.15);
+    transition: all 0.5s;
+}
