--- a/Semana13/hola-angular/src/app/components/header/header.component.html
+++ b/Semana13/hola-angular/src/app/components/header/header.component.html
@@ -2,7 +2,18 @@
 
 <ul>
 	<!-- directivas -->
+	<!-- ngFor map -->
 	<li *ngFor="let act of actividades">
 		{{act}}
 	</li>
 </ul>
+
+<!-- ngIf en caso se cumpla adquiere la propiedad indicada y si no puede utilizar ng-template -->
+<div *ngIf="losQuiere else noLosQuiere">
+	Van a tener una noche buena
+</div>
+
+<!-- comodín -->
+<ng-template #noLosQuiere>
+	Party Hard!!!
+</ng-template>
