--- a/Semana13/hola-angular/src/app/components/header/header.component.html
+++ b/Semana13/hola-angular/src/app/components/header/header.component.html
@@ -17,3 +17,6 @@
 <ng-template #noLosQuiere>
 	Party Hard!!!
 </ng-template>
+
+<!-- PropertyBinding [] : mandar datos del .ts hacia el .html -->
+<img [src]="urlImagen" alt="imagencita">
