--- a/Semana13/hola-angular/src/app/components/header/header.component.html
+++ b/Semana13/hola-angular/src/app/components/header/header.component.html
@@ -20,3 +20,8 @@
 
 <!-- PropertyBinding [] : mandar datos del .ts hacia el .html -->
 <img [src]="urlImagen" alt="imagencita">
+
+<!-- EventBinding [] : mandar datos del .html hacia el .ts -->
+<button (click)="agregarActividad()">
+	Agregar Actividad
+</button>
