--- a/Semana13/hola-angular/src/app/components/header/header.component.html
+++ b/Semana13/hola-angular/src/app/components/header/header.component.html
@@ -22,7 +22,7 @@
 <img [src]="urlImagen" alt="imagencita">
 <br>
 
-<!--  -->
+<!-- Two Data Binding [()] -->
 <input 
 	[(ngModel)]="nuevaActividad"
 	type="text" 
