--- a/Semana13/my-project/src/app/components/productos/productos.component.html
+++ b/Semana13/my-project/src/app/components/productos/productos.component.html
@@ -1,1 +1,5 @@
-<p>productos works!</p>
+<div class="row">
+  <div class="col-12 col-md-6 col-lg-3" *ngFor="let prod of misProductos">
+	  <app-cardprod></app-cardprod>
+  </div>
+</div>
