--- a/Semana13/my-project/src/app/app.component.html
+++ b/Semana13/my-project/src/app/app.component.html
@@ -1,2 +1,6 @@
-Hola
-<app-productos></app-productos>
+<app-navbar></app-navbar>
+<div class="container my-5 py-4">
+	<h1 class="mb-3">Store 5 - Productos</h1>
+	<!-- por cada ruta que tengamos configurada me va a mostrar el componente indicado -->
+	<router-outlet></router-outlet>
+</div>
