--- a/Semana13/my-project/src/app/components/productos/productos.component.html
+++ b/Semana13/my-project/src/app/components/productos/productos.component.html
@@ -1,5 +1,5 @@
 <div class="row">
   <div class="col-12 col-md-6 col-lg-3" *ngFor="let prod of misProductos">
-	  <app-cardprod></app-cardprod>
+	  <app-cardprod [prod]="prod"></app-cardprod>
   </div>
 </div>
